Fix flex shrink bug when page is too long

--- a/src/common/propertie/Propertie.module.css
+++ b/src/common/propertie/Propertie.module.css
@@ -3,8 +3,10 @@
   flex-direction: column;
   padding: 10px;
   border-radius: 6px;
+  align-items: flex-start;
   gap: 8px;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .container:hover,
